...
    });
  }, []);
  return (
    <Column loose>
      <Carousel testID="native-carousel" items={items} defaultIndex={1} showDots showArrows={false}
        onIndexChange={changeIndex} />
      <Typography testID="carousel-current">Current page: {current + 1}</Typography>
      <Typography testID="carousel-changes">Page changes: {changes}</Typography>
      <Button onPress={measureCurrent}>Measure current slide</Button>
      <Typography small muted testID="carousel-measurement">{JSON.stringify(measurement)}</Typography>
    </Column>
  );
}

